<resources>
    <string-array name="alcohol">
        <item>Beer(s)</item>
        <item>Spirit(s)</item>
        <item>Bottle(s) of Wine</item>
    </string-array>
    <string name="app_name">SafeDrinkingApp</string>
    <string name="action_settings">Settings</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="sex">Sex</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="submit">Submit</string>
    <string name="title_activity_bac">BAC</string>
    <string name="time">How Many Hours Will You Be Out?</string>
    <string name="AC">Amount of Liquid Oz. of Alcohol</string>
    <string name="alert">Timer in order to drink per hour</string>
    <string name="title_activity_functions">Functions</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_am_idrunk_yet">AmIDrunkYet</string>
    <string name="timer">Time</string>
    <string name="title_activity_am_idrunk_yet_improved">AmIDrunkYetImproved</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="drinks">Drinks</string>
    <string name="bac">B.A.C</string>
    <string name="uber"><![CDATA[Timer & Uber]]></string>
</resources>
