<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryDark"


    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sam.safedrinkingapp.MainActivity"
    tools:showIn="@layout/activity_main">

    <EditText
        android:id="@+id/Weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:inputType="number"
        android:backgroundTint="@color/myWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:inputType="number"
        android:backgroundTint="@color/myWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Weight" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/weight"
        android:textColor="@color/myWhite"
        app:layout_constraintBottom_toTopOf="@+id/Weight"
        app:layout_constraintStart_toStartOf="@+id/Weight" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/height"
        android:textColor="@color/myWhite"
        app:layout_constraintBottom_toTopOf="@+id/Height"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="16dp"
        android:text="@string/sex"
        android:textColor="@color/myWhite"
        app:layout_constraintBottom_toTopOf="@+id/Sex"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Height"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginLeft="16dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <RadioGroup
        android:id="@+id/Sex"
        android:layout_width="368dp"
        android:layout_height="89dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/myWhite"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Height"
        android:layout_marginLeft="8dp">

        <RadioButton
            android:id="@+id/SexMale"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:buttonTint="@color/myWhite"
            android:text="@string/male"
            android:textColor="@color/myWhite"
            tools:layout_editor_absoluteX="59dp"
            tools:layout_editor_absoluteY="311dp" />

        <RadioButton
            android:id="@+id/SexFemale"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:buttonTint="@color/myWhite"
            android:text="@string/female"
            android:textColor="@color/myWhite"
            tools:layout_editor_absoluteX="171dp"
            tools:layout_editor_absoluteY="311dp" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>
